# plutarch-plutus

./: .envrc  .gitignore  .hlint.yaml  .nojekyll  01-index.tar  404.html  CHANGELOG.md  CNAME  Concepts.html  DEVGUIDE.html  GUIDE.md  Introduction.html  LICENSE  Overview.html  Plutarch.hs  README.html  README.md  Run.html  Tricks.html  Troubleshooting.html  Typeclasses.html  Types.html  Usage.html  cabal-haskell.nix.project  cabal.project  doc-index-124.html  doc-index-33.html  doc-index-35.html  doc-index-36.html  doc-index-46.html  doc-index-60.html  doc-index-62.html  doc-index-92.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  (+45 more)
examples/: BASIC.html  Main.hs  Utils.hs  VALIDATOR.html  examples.cabal
examples/Examples/: Api.hs  ConstrData.hs  Field.hs  LetRec.hs  Lift.hs  List.hs  PIsData.hs  PlutusType.hs  Rationals.hs  Recursion.hs  Scripts.hs  SeaBug.hs  SeaBugSource.hs  Tracing.hs
examples/Properties/: Gen.hs  Spec.hs  Utils.hs
examples/golden/: authStakeValidator.hash.golden  authStakeValidator.plutus.golden  authValidator.hash.golden  authValidator.plutus.golden
plutarch-api/: CHANGELOG.md  plutarch-api.cabal
plutarch-benchmark/: README.md  plutarch-benchmark.cabal
plutarch-benchmark/bench/: Main.hs
plutarch-benchmark/benchmark-diff/: Main.hs
plutarch-benchmark/perf-diff/: Main.hs
plutarch-docs/: Concepts.md  Introduction.md  Main.lhs  README.md  Run.md  Tricks.md  Troubleshooting.md  Typeclasses.md  Types.md  createSymlinks  index.md  index.yaml  plutarch-docs.cabal
plutarch-docs/Concepts/: Data and Scott encoding.md  GenericProgramming.md  Haskell Synonym.md  Hoisting.md  PMatch.md
plutarch-docs/Introduction/: Delay and Force.md  Pattern matching.md  Plutarch Terms.md
plutarch-docs/Tricks/: Difference between pcon and pconstant.md  Don't duplicate work.md  Optimizing unhoistable lambdas.md  Plutarch functions strict.md  Prefer matching on pmatch result immediately.md  Prefer statically building constants.md  Representation of Plutarch type.md  Responsibility of evaluation in Haskell functions.md  Using Haskell level functions.md  Working with bound fields.md  makeIsDataIndexed, Haskell ADTs, and PIsDataRepr.md
plutarch-docs/Typeclasses/: PConstant and PLift.md  PEq and POrd.md  PIsData.md  PIsDataRepr and PDataFields.md  PTryFrom.md  PlutusType, PCon, and PMatch.md
plutarch-docs/Types/: PAsData.md  PBool.md  PBuiltinList.md  PByteString.md  PData.md  PDataSum and PDataRecord.md  PInteger.md  PList.md  PRecord.md  PString.md  PTuple.md  PUnit.md
plutarch-docs/Usage/: Avoid work duplication using plet.md  Deriving for newtypes.md  Do syntax with QualifiedDo.md  Do syntax with TermCont.md  FFI.md  Raising errors.md  Recursion.md  Tracing.md  Unsafe functions.md
plutarch-docs/compilable/: DataAndScottEncoding.lhs  Hoisting.lhs  Main.lhs  PMatch.lhs
plutarch-docs/examples/: VALIDATOR.md
plutarch-docs/src/: Concepts.md  DEVGUIDE.md  DelayAndForce.md  Introduction.md  Overview.md  PConstantAndPLift.md  PEqAndPOrd.md  PIntegral.md  PIsData.md  PIsDataReprAndPDataFields.md  PListLike.md  PTryFrom.md  PatternMatching.md  PlutarchTerms  PlutarchTypes.md  PlutusType,PCon,PMatch.md  Run.md  SUMMARY.md  Tricks.md  Troubleshooting.md  Typeclasses.md  Types.md  UntypedPlutusCore.md  Usage.md  index.md  index.yaml
plutarch-extra/: CHANGELOG.md  plutarch-extra.cabal
plutarch-extra/Plutarch/: Extra.hs  ListUtils.hs
plutarch-extra/plutarch-preludes/: plutarch-preludes.cabal
plutarch-extra/preludes/: PPrelude.hs
plutarch-ffi-tests/: README.md  plutarch-ffi-tests.cabal
plutarch-ffi-tests/examples/: Main.hs
plutarch-ledger-api/: CHANGELOG.md  plutarch-ledger-api.cabal
plutarch-ledger-api/test/: Laws.hs  Main.hs  Regressions.hs  Utils.hs  V1.hs  V2.hs  V3.hs
plutarch-numeric/: .nvimrc  CHANGELOG.md  Makefile  README.md  new-hierarchy.md  plutarch-numeric.cabal
plutarch-test/: CHANGELOG.md  Main.hs  README.md  plutarch-test.cabal
plutarch-test/Plutarch/: ApiSpec.hs  BoolSpec.hs  ByteStringSpec.hs  FieldSpec.hs  IntegerSpec.hs  ListSpec.hs  MonadicSpec.hs  PLamSpec.hs  RationalSpec.hs  RecursionSpec.hs  StringSpec.hs  Test.hs  TraceSpec.hs  UnitSpec.hs
plutarch-test/goldens/: EqOrdSpec.goldens.MaybeInt.bench.golden  EqOrdSpec.goldens.MaybeInt.uplc.eval.golden  EqOrdSpec.goldens.MaybeInt.uplc.golden  EqOrdSpec.goldens.PairInt.bench.golden  EqOrdSpec.goldens.PairInt.uplc.eval.golden  EqOrdSpec.goldens.PairInt.uplc.golden  FFI.Data.Benchmarks.bench.golden  FFI.Data.Benchmarks.uplc.eval.golden  FFI.Data.Benchmarks.uplc.golden  Plutarch.BoolSpec.bool.lazy.pand.bench.golden  add1.app.bench.golden  add1.app.uplc.golden  add1.bench.golden  add1.uplc.golden  api.ctx.bench.golden  api.ctx.get.credentials.bench.golden  api.ctx.get.credentials.uplc.eval.golden  api.ctx.get.credentials.uplc.golden  api.ctx.get.mint.bench.golden  api.ctx.get.mint.uplc.eval.golden  api.ctx.get.mint.uplc.golden  api.ctx.get.sym.bench.golden  api.ctx.get.sym.uplc.eval.golden  api.ctx.get.sym.uplc.golden  api.ctx.get.txInfo.bench.golden  api.ctx.get.txInfo.uplc.eval.golden  api.ctx.get.txInfo.uplc.golden  api.ctx.uplc.eval.golden  api.ctx.uplc.golden  api.dev=false.bench.golden  api.dev=true.bench.golden  api.dev=true.uplc.golden  api.example.getFields.bench.golden  api.example.getFields.uplc.eval.golden  api.example.signatory.bench.golden  api.example.signatory.cont.uplc.golden  api.example.signatory.dev=false.bench.golden  api.example.signatory.dev=false.uplc.golden  api.example.signatory.dev=true.bench.golden  api.example.signatory.dev=true.cont.bench.golden  (+401 more)
plutarch-test/plutarch-base/: BaseSpec.hs
plutarch-test/plutarch-extra/: ExtraSpec.hs
plutarch-test/src/: Gen.hs  Main.hs  Spec.hs  Util.hs
plutarch-test/tests/: Main.hs  Spec.hs
plutarch-testlib/: CHANGELOG.md  bench.csv  plutarch-testlib.cabal
plutarch-testlib/bench/: Bench.hs
plutarch-testlib/goldens/: api.example.getFields.bench.golden  array-fusion.uplc.eval.golden  (+98 more)
plutarch-trace/: README.md  plutarch-trace.cabal
(+20811 files in other folders)
