cabal-version:      3.0
name:               plutarch
version:            1.2.0
author:             Las Safin <me@las.rs>
license:            MIT
extra-source-files: README.md
tested-with:        GHC ==9.2.3

common c
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    ForeignFunctionInterface
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    ImpredicativeTypes
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoStarIsType
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    PostfixOperators
    QualifiedDo
    QuantifiedConstraints
    RankNTypes
    RelaxedPolyRec
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Weverything -Wno-unused-do-bind -Wno-missing-kind-signatures
    -Wno-partial-type-signatures -Werror -Wno-implicit-prelude
    -Wno-name-shadowing -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-prepositive-qualified-module
    -Wno-missing-import-lists -Wno-monomorphism-restriction
    -Wno-all-missed-specializations -Wno-unrecognised-warning-flags
    -fprint-equality-relations -fprint-explicit-kinds
    -fprint-explicit-foralls

library
  import:          c
  exposed-modules:
    Plutarch
    Plutarch.Api.Internal.Hashing
    Plutarch.Api.V1
    Plutarch.Api.V1.Address
    Plutarch.Api.V1.AssocMap
    Plutarch.Api.V1.Contexts
    Plutarch.Api.V1.Crypto
    Plutarch.Api.V1.DCert
    Plutarch.Api.V1.Interval
    Plutarch.Api.V1.Maybe
    Plutarch.Api.V1.Scripts
    Plutarch.Api.V1.Time
    Plutarch.Api.V1.Tuple
    Plutarch.Api.V1.Tx
    Plutarch.Api.V1.Value
    Plutarch.Api.V2
    Plutarch.Api.V2.Contexts
    Plutarch.Api.V2.Tx
    Plutarch.Bool
    Plutarch.Bool2
    Plutarch.Builtin
    Plutarch.Builtin2
    Plutarch.ByteString
    Plutarch.Crypto
    Plutarch.DataRepr
    Plutarch.DataRepr.Internal
    Plutarch.DataRepr.Internal.Field
    Plutarch.DataRepr.Internal.FromData
    Plutarch.DataRepr.Internal.HList
    Plutarch.DataRepr.Internal.HList.Utils
    Plutarch.Either
    Plutarch.Either2
    Plutarch.Evaluate
    Plutarch.FFI
    Plutarch.Integer
    Plutarch.Integer2
    Plutarch.Internal
    Plutarch.Internal.Evaluate
    Plutarch.Internal.Generic
    Plutarch.Internal.Newtype
    Plutarch.Internal.Newtype2
    Plutarch.Internal.Other
    Plutarch.Internal.Other2
    Plutarch.Internal.PLam
    Plutarch.Internal.PlutusType
    Plutarch.Internal.PlutusType2
    Plutarch.Internal.PrettyStack
    Plutarch.Internal.Quantification
    Plutarch.Internal.ScottEncoding
    Plutarch.Internal.ScottEncoding2
    Plutarch.Internal.Trace
    Plutarch.Internal.Trace2
    Plutarch.Internal.TypeFamily
    Plutarch.Internal.TypeFamily2
    Plutarch.Internal.Witness
    Plutarch.Internal2
    Plutarch.Lift
    Plutarch.Lift2
    Plutarch.List
    Plutarch.List2
    Plutarch.Maybe
    Plutarch.Maybe2
    Plutarch.Monadic
    Plutarch.Num
    Plutarch.Num2
    Plutarch.Pair
    Plutarch.Pair2
    Plutarch.Positive
    Plutarch.Positive2
    Plutarch.Plutus
    Plutarch.Prelude
    Plutarch.Prelude2
    Plutarch.Pretty
    Plutarch.Pretty.Internal.BuiltinConstant
    Plutarch.Pretty.Internal.Config
    Plutarch.Pretty.Internal.Name
    Plutarch.Pretty.Internal.TermUtils
    Plutarch.Pretty.Internal.Types
    Plutarch.Rational
    Plutarch.Rational2
    Plutarch.Reducible
    Plutarch.Show
    Plutarch.String
    Plutarch.String2
    Plutarch.TermCont
    Plutarch.Trace
    Plutarch.Trace2
    Plutarch.TryFrom
    Plutarch.Unit
    Plutarch.Unit2
    Plutarch.Unsafe
    Plutarch.Unsafe2

  build-depends:
    , base
    , bytestring
    , constraints
    , containers
    , cryptonite
    , data-default
    , flat
    , generics-sop
    , lens
    , memory
    , mtl
    , plutarch-core
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , prettyprinter
    , random
    , serialise
    , sop-core
    , text
