cabal-version:      3.0
name:               plutarch
version:            1.14.0
author:
  Las Safin <me@las.rs>, Koz Ross <koz@mlabs.city>, Seungheon Oh <seungheon.oh@mlabs.city>, Philip DiSarro <philipdisarro@gmail.com>, Sean Hunter <sean@mlabs.city>

license:            MIT
extra-source-files: README.md
tested-with:        GHC ==9.6.4

common c
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    ImpredicativeTypes
    LambdaCase
    LexicalNegation
    LiberalTypeSynonyms
    MonadComprehensions
    MultiWayIf
    NegativeLiterals
    NoFlexibleInstances
    NoMonomorphismRestriction
    NoStarIsType
    NondecreasingIndentation
    NumDecimals
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternSynonyms
    QualifiedDo
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    RoleAnnotations
    TypeFamilies
    TypeFamilyDependencies
    UnicodeSyntax
    UnliftedFFITypes
    UnliftedNewtypes
    ViewPatterns

  build-depends:      base >=4.9 && <5
  ghc-options:
    -Weverything -Wno-unused-do-bind -Wno-missing-kind-signatures
    -Wno-partial-type-signatures -Werror -Wno-implicit-prelude
    -Wno-name-shadowing -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-prepositive-qualified-module
    -Wno-monomorphism-restriction -Wno-missed-specialisations
    -Wno-all-missed-specializations -Wno-unrecognised-warning-flags
    -Wno-unrecognised-pragmas -Wno-operator-whitespace
    -fprint-equality-relations -fprint-explicit-kinds
    -fprint-explicit-foralls -Wno-missing-import-lists
    -Wno-missing-export-lists -Wno-missing-role-annotations
    -Wno-x-partial

library
  import:          c
  exposed-modules:
    Plutarch.Array
    Plutarch.Backend.ANF
    Plutarch.Backend.Arity
    Plutarch.Backend.AST
    Plutarch.Backend.Compile
    Plutarch.Backend.PosTree
    Plutarch.Backend.RawTerm
    Plutarch.Backend.S
    Plutarch.Backend.Term
    Plutarch.Backend.UPLC
    Plutarch.Backend.VarMap
    Plutarch.BitString
    Plutarch.Builtin.Array
    Plutarch.Builtin.BLS
    Plutarch.Builtin.Bool
    Plutarch.Builtin.ByteString
    Plutarch.Builtin.Crypto
    Plutarch.Builtin.Data
    Plutarch.Builtin.Integer
    Plutarch.Builtin.Opaque
    Plutarch.Builtin.String
    Plutarch.Builtin.Unit
    Plutarch.Builtin.Value
    Plutarch.DataRepr
    Plutarch.DataRepr.Internal
    Plutarch.DataRepr.Internal.Field
    Plutarch.DataRepr.Internal.FromData
    Plutarch.DataRepr.Internal.HList
    Plutarch.DataRepr.Internal.HList.Utils
    Plutarch.Either
    Plutarch.Enum
    Plutarch.Evaluate
    Plutarch.Internal.Case
    Plutarch.Internal.Eq
    Plutarch.Internal.Evaluate
    Plutarch.Internal.Fix
    Plutarch.Internal.Generic
    Plutarch.Internal.IsData
    Plutarch.Internal.Lift
    Plutarch.Internal.ListLike
    Plutarch.Internal.Newtype
    Plutarch.Internal.Numeric
    Plutarch.Internal.Ord
    Plutarch.Internal.Other
    Plutarch.Internal.Parse
    Plutarch.Internal.PLam
    Plutarch.Internal.PlutusType
    Plutarch.Internal.PrettyStack
    Plutarch.Internal.Quantification
    Plutarch.Internal.ScottEncoding
    Plutarch.Internal.Semigroup
    Plutarch.Internal.Show
    Plutarch.Internal.Subtype
    Plutarch.Internal.Term
    Plutarch.Internal.TermCont
    Plutarch.Internal.Trace
    Plutarch.Internal.TryFrom
    Plutarch.Internal.TypeFamily
    Plutarch.Internal.Witness
    Plutarch.List
    Plutarch.Maybe
    Plutarch.Monadic
    Plutarch.Pair
    Plutarch.Prelude
    Plutarch.Pretty
    Plutarch.Pretty.Internal.BuiltinConstant
    Plutarch.Pretty.Internal.Config
    Plutarch.Pretty.Internal.Name
    Plutarch.Pretty.Internal.TermUtils
    Plutarch.Pretty.Internal.Types
    Plutarch.Primitive.Apply
    Plutarch.Primitive.Array
    Plutarch.Primitive.BLS
    Plutarch.Primitive.Bool
    Plutarch.Primitive.BuiltinFun
    Plutarch.Primitive.ByteString
    Plutarch.Primitive.Con
    Plutarch.Primitive.Data
    Plutarch.Primitive.Function
    Plutarch.Primitive.List
    Plutarch.Primitive.Match
    Plutarch.Primitive.Numeric
    Plutarch.Primitive.Pair
    Plutarch.Primitive.String
    Plutarch.Primitive.Value
    Plutarch.Rational
    Plutarch.Reducible
    Plutarch.Repr.Data
    Plutarch.Repr.Derive
    Plutarch.Repr.Internal
    Plutarch.Repr.Scott
    Plutarch.Repr.SOP
    Plutarch.Repr.Tag
    Plutarch.Script
    Plutarch.String
    Plutarch.TermCont
    Plutarch.Trace
    Plutarch.Unroll
    Plutarch.Unsafe
    Plutarch.Utils.Pretty

  build-depends:
    , aeson
    , bimap
    , bytestring
    , constraints
    , containers
    , data-default
    , generics-sop
    , hashable
    , lens
    , mtl
    , nonempty-vector
    , plutus-core           ==1.64.0.0
    , plutus-ledger-api
    , plutus-tx
    , prettyprinter
    , QuickCheck
    , quickcheck-instances
    , random
    , semialign
    , smash
    , sop-core
    , text
    , these
    , unordered-containers
    , vector

test-suite tests
  import:         c
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
    , mtl
    , nonempty-vector
    , plutarch
    , plutus-core
    , pretty-show
    , prettyprinter
    , tasty
    , tasty-hunit
