cabal-version:      3.0
name:               plutarch-test
version:            1.0.0

author: Las Safin <me@las.rs>
license: MIT

test-suite examples
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
  build-depends:
    , base
    , bytestring
    , plutarch
    , plutarch-trace
    , plutarch-trace:enable
    , plutarch-trace:disable
    , tasty
    , tasty-hunit
    , plutus-ledger-api
    , plutus-core
    , aeson
    , plutus-tx
  mixins:
    plutarch-trace (Plutarch.Trace) requires (Plutarch.TraceSig as Plutarch.Trace.Enable),
    plutarch-trace (Plutarch.Trace as Plutarch.NoTrace) requires (Plutarch.TraceSig as Plutarch.Trace.Disable)
  default-language: Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    LambdaCase
    TypeFamilies
    OverloadedStrings
    PartialTypeSignatures
    ViewPatterns
    -- poor man's GHC2021
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StarIsType
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-partial-type-signatures
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies -Wno-name-shadowing
