cabal-version: 3.6
name:          plutarch-docs
version:       1.3.0
build-type:    Simple

common c
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DisambiguateRecordFields
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    ImpredicativeTypes
    LambdaCase
    LexicalNegation
    LiberalTypeSynonyms
    MonadComprehensions
    MultiWayIf
    NegativeLiterals
    NoFlexibleInstances
    NoMonomorphismRestriction
    NoStarIsType
    NondecreasingIndentation
    NumDecimals
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternSynonyms
    QualifiedDo
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RecursiveDo
    RoleAnnotations
    TypeFamilies
    TypeFamilyDependencies
    UnicodeSyntax
    UnliftedFFITypes
    UnliftedNewtypes
    ViewPatterns

  ghc-options:
    -Weverything -Wno-unused-do-bind -Wno-missing-kind-signatures
    -Wno-partial-type-signatures -Werror -Wno-implicit-prelude
    -Wno-name-shadowing -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-prepositive-qualified-module
    -Wno-missing-import-lists -Wno-monomorphism-restriction
    -Wno-all-missed-specializations -Wno-unrecognised-warning-flags
    -Wno-unrecognised-pragmas -Wno-unticked-promoted-constructors
    -Wno-unused-packages -Wno-operator-whitespace
    -fprint-equality-relations -fprint-explicit-kinds
    -fprint-explicit-foralls

library

executable plutarch-docs
  import:             c
  default-language:   GHC2021
  main-is:            Main.lhs
  other-modules:
    Plutarch.Docs.BasicExample
    Plutarch.Docs.Conditionals
    Plutarch.Docs.DataAndScottEncoding
    Plutarch.Docs.DelayAndForce
    Plutarch.Docs.DerivingForNewtype
    Plutarch.Docs.DerivingGenerics
    Plutarch.Docs.DifferencePconPconstant
    Plutarch.Docs.Hoisting
    Plutarch.Docs.Introduction
    Plutarch.Docs.OptimizingUnhoistable
    Plutarch.Docs.PAsData
    Plutarch.Docs.PatternMatching
    Plutarch.Docs.PBool
    Plutarch.Docs.PBuiltinList
    Plutarch.Docs.PBuiltinPair
    Plutarch.Docs.PByteString
    Plutarch.Docs.PConstantAndPLift
    Plutarch.Docs.PData
    Plutarch.Docs.PDataFields
    Plutarch.Docs.PDataSumAndRecord
    Plutarch.Docs.PEqAndPOrd
    Plutarch.Docs.PInteger
    Plutarch.Docs.PList
    Plutarch.Docs.PListLike
    Plutarch.Docs.PlutarchConstants
    Plutarch.Docs.PlutarchLambdas
    Plutarch.Docs.PlutusTypePConAndPMatch
    Plutarch.Docs.PMatch
    Plutarch.Docs.PreferMatchingOnResult
    Plutarch.Docs.PreferStaticallyBuilding
    Plutarch.Docs.PString
    Plutarch.Docs.PTryFrom
    Plutarch.Docs.PTuple
    Plutarch.Docs.PUnit
    Plutarch.Docs.QDo
    Plutarch.Docs.RaiseErrs
    Plutarch.Docs.Recursion
    Plutarch.Docs.Run
    Plutarch.Docs.TermCont
    Plutarch.Docs.Tracing
    Plutarch.Docs.Unsafe
    Plutarch.Docs.UsePlet
    Plutarch.Docs.UsingHaskellLevelFunctions
    Plutarch.Docs.ValidatorExample
    Plutarch.Docs.WorkDuplication
    Plutarch.Docs.WorkingWithBoundFields

  hs-source-dirs:     . compilable
  ghc-options:        -pgmL markdown-unlit
  build-tool-depends: markdown-unlit:markdown-unlit
  build-depends:
    , base
    , bytestring
    , cborg
    , data-default
    , generics-sop
    , lens
    , markdown-unlit
    , plutarch
    , plutarch-extra
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , serialise
    , text
