cabal-version: 3.0
name:          plutarch-ledger-api
version:       3.1.0

common common-lang
  default-language:   Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Werror
    -Wmissing-deriving-strategies -Wmissing-export-lists

  build-depends:      base
  default-extensions:
    BangPatterns
    BinaryLiterals
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

common test-lang
  import:        common-lang
  ghc-options:   -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , plutarch
    , plutarch-ledger-api
    , plutus-ledger-api
    , QuickCheck
    , tasty
    , tasty-quickcheck

library
  import:          common-lang
  exposed-modules:
    Plutarch.LedgerApi
    Plutarch.LedgerApi.AssocMap
    Plutarch.LedgerApi.Interval
    Plutarch.LedgerApi.Utils
    Plutarch.LedgerApi.Value

  other-modules:
    Plutarch.LedgerApi.Address
    Plutarch.LedgerApi.Contexts
    Plutarch.LedgerApi.Credential
    Plutarch.LedgerApi.Crypto
    Plutarch.LedgerApi.Scripts
    Plutarch.LedgerApi.Time
    Plutarch.LedgerApi.Tx

  build-depends:
    , bytestring
    , cryptonite
    , memory
    , plutarch
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , serialise

  hs-source-dirs:  src

test-suite tests
  import:         test-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , plutarch-orphanage
    , prettyprinter

  hs-source-dirs: test
